[package]
name = "arbitrum_vault"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/xiaxianlin/arbitrum-vault"
repository = "https://github.com/xiaxianlin/arbitrum-vault"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = ""

[dependencies]
alloy-primitives = "=0.7.6"
alloy-sol-types = "=0.7.6"
alloy-sol-macro-expander = "=0.7.6"
mini-alloc = "0.6.0"
stylus-sdk = "0.6.0"
hex = "0.4.3"
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "arbitrum-vault"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
